--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Welcome</title>
     <link rel="shortcut icon" href="https://freepngimg.com/download/city/36275-3-city-hd.png">
 </head>
@@ -14,7 +14,7 @@
             <h2 class="title">SHOT-O-GRAPH</h2>
         </header>
 
-        <video src="images/videoplayback.mp4" muted autoplay loop></video>
+        <video src="videoplayback.mp4" muted autoplay loop></video>
 
         <div class="overlay"></div>
 
