--- a/videobg using html/index.html
+++ b/videobg using html/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="styles.css">
     <title>Welcome</title>
     <link rel="shortcut icon" href="https://freepngimg.com/download/city/36275-3-city-hd.png">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-203907898-1">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-203907898-1');
+</script>
 </head>
 <body>
     <section class="showcase">
